# geny-memory-adaptor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
eval/: ablation.py  agent_memory_ko.py  build_corpus.py  learning_sim.py  perturb.py  real_vault.py  run_eval.py
eval/data/: README.md  corpus.jsonl  qrels.tsv  queries_clean.jsonl
eval/data/perturbations/: compound.jsonl  homonym.jsonl  jamo.jsonl  josa.jsonl  koen.jsonl  spacing.jsonl
src/geny_memory_adaptor/: __init__.py  bm25.py  config.py  embedder.py  engine.py  executor_adapter.py  graph.py  hangul.py  ranker.py  store.py  tokenizer.py
tests/: bench.py  test_eval_regression.py  test_korean.py  test_synapse.py
