[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geny-memory-adaptor"
version = "1.2.0"
description = "Synapse — a learnable, lightweight graph-traversal memory engine: BM25 + local static embeddings + typed-edge PageRank + an online-learned ranker, in one SQLite file with zero API calls."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "CocoRoF" }]
keywords = ["memory", "agent", "retrieval", "bm25", "graph", "pagerank", "online-learning", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/CocoRoF/geny-memory-adaptor"
Repository = "https://github.com/CocoRoF/geny-memory-adaptor"
Changelog = "https://github.com/CocoRoF/geny-memory-adaptor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/geny_memory_adaptor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E702", "E701"]
"src/geny_memory_adaptor/ranker.py" = ["E702"]
"src/geny_memory_adaptor/embedder.py" = ["E702"]
"src/geny_memory_adaptor/engine.py" = ["E702"]
